Webpack FINAL commit (Con errores arreglados)

--- a/code/src/HTML/pageFive.html
+++ b/code/src/HTML/pageFive.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Pagina 5</title>
-    <link rel="stylesheet" href="CSS/style.css" type="text/css">
 </head>
 <body>
-    <script src="JS/pageFive.js"></script>
+    <script src="../../dist/pageFive.bundle.js"></script>
 </body>
 </html>
