--- a/code/src/HTML/pageOne.html
+++ b/code/src/HTML/pageOne.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Pagina 1</title>
-    <link rel="stylesheet" href="../../src/CSS/style.css" type="text/css">
 </head>
 <body>
-    <script src="./pageOne.bundle.js"></script>
+    <script src="../../dist/pageOne.bundle.js"></script>
 </body>
 </html>
