--- a/code/src/HTML/pageFour.html
+++ b/code/src/HTML/pageFour.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Pagina 4</title>
-    <link rel="stylesheet" href="CSS/style.css" type="text/css">
 </head>
 <body>
-    <script src="JS/pageFour.js"></script>
+    <script src="../../dist/pageFour.bundle.js"></script>
 </body>
 </html>
