--- a/code/src/HTML/pageTwo.html
+++ b/code/src/HTML/pageTwo.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Pagina Dos</title>
-    <link rel="stylesheet" href="CSS/style.css" type="text/css">
 </head>
 <body>
-    <script src="JS/pageTwo.js"></script>
+    <script src="../../dist/pageTwo.bundle.js"></script>
 </body>
 </html>
